--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -153,7 +153,9 @@
                     if (minPoint != null) {
                         var popup = L.popup()
                             .setLatLng([minPoint.lat, minPoint.lon])
-                            .setContent("<strong>" + minPoint.establishment_name + "</strong> (" + minPoint.score + ")<br/>" + minPoint.establishment_address)
+                            .setContent('<strong>' + minPoint.establishment_name +
+                                '</strong> (<a target="_blank" href="http://ec2-184-73-102-222.compute-1.amazonaws.com:8080/establishment?id='+
+                                minPoint.establishment_id+'">' + minPoint.score + "</a>)<br/>" + minPoint.establishment_address)
                             .openOn(map);
                     }
 
